@@ -2,6 +2,7 @@
 Issue #1016 EnableTaskScheduler parameter is ignored when using traefik
 Fix regression - New-BcContainer - support blank platform in app artifact
 Add retry algorithm to Download-Artifacts
+Dump Additional Parameters during start
 
 0.7.0.3
 New-BcContainer - support blank platform in app artifact
